Fixed problem with alignment of web page

--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,6 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  margin: auto;
 }
 
 header {
@@ -116,6 +115,7 @@ header .nav-black {
 }
 header .desktop-navbar {
   max-width: 1024px;
+  margin: 0 auto;
 }
 
 footer .top-footer {
