--- a/css/scss/styles.scss
+++ b/css/scss/styles.scss
@@ -157,6 +157,7 @@ header {
 
   .desktop-navbar {
     max-width: 1024px;
+    margin: 0 auto;
   }
 }
 
