--- a/css/tickets.css
+++ b/css/tickets.css
@@ -82,7 +82,10 @@ p {
 
 body {
   max-width: 1024px;
-  background: url("../../assets/imgs/ilustracion_colegio_elan_transparent.png") no-repeat center center fixed;
+  background-image: url("../../assets/imgs/ilustracion_colegio_elan_transparent.png");
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
@@ -112,6 +115,7 @@ header .nav-black {
 }
 header .desktop-navbar {
   max-width: 1024px;
+  margin: 0 auto;
 }
 
 footer .top-footer {
